https://github.com/craftercms/craftercms/issues/2692 - [studio-ui] Cluster table members is not responsive #2692

--- a/ui/scss/user-dashboard/_admin.scss
+++ b/ui/scss/user-dashboard/_admin.scss
@@ -16,6 +16,11 @@ table {
       width: 50px;
       height: 50px;
     }
+
+    &.break{
+      word-break: break-all;
+    }
+
   }
 }
 
